# spark_optimizer

./: HQE_dag.yaml  README.md  ca7_to_airflow.py  pyproject.toml  test_ext.xlsx  test_ext2.xlsx  test_input.xlsx  test_js1t.xlsx  test_runs.xlsx  test_time.xlsx  ~$test_ext.xlsx
docs/: SPARK_OPTIMIZER.md
examples/: spark_optimizer_batch_job.py
out2/: HQE_dag.yaml
out3/: HQE_dag.yaml
out4/: HQE_dag.yaml
spark_optimizer/: __init__.py  cluster_calculator.py  config.py  constants.py  formulas.py  logging_config.py  optimizer.py
tests/: test_spark_optimizer.py
