[project]
name = "spark-optimizer"
version = "0.1.0"
description = "Production-grade Spark 3.x optimization: config-driven executors, memory, shuffle partitions, and write optimization"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
]

#[project.optional-dependencies]
#spark = ["pyspark>=3.4.0"]
#dev = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1", "black>=23.11.0", "ruff>=0.1.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spark_optimizer"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
